<resources>
    <string name="app_name">01-WebService</string>
    <string name="edit_codigo">Código do Item</string>
    <string name="btn_buscar">Buscar</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="localidade">Localidade</string>
    <string name="uf">UF</string>
    <string name="ibge">IBGE</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
